--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -6,6 +6,12 @@ body {
   font-family:'Ubuntu', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.modal{
+  margin-top: 20px;
+  padding: 20px;
+  background: #eee;
+}
+
 .black-nav{
   background: black;
   width: 100%;
