--- a/portfolios/JavaScript_JQuery/lv1/level1_bootstrap.css
+++ b/portfolios/JavaScript_JQuery/lv1/level1_bootstrap.css
@@ -10,7 +10,8 @@
     z-index: 5;
     width: 100%;
     height: 100%;
-    display: none;   
+    display: none;
+    border-radius: 0px;
 }
 
 .white-background{
@@ -20,4 +21,16 @@
     padding: 20px;
     border-radius: 10px;
 
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    align-items: center;
+}
+
+.nav-sub{
+    display: none;
+    
 }
