--- a/portfolios/Node_JS/views/list.ejs
+++ b/portfolios/Node_JS/views/list.ejs
@@ -32,8 +32,12 @@
       </nav>
       <!-- EJS 렌더링은 반드시 views 폴더 안으로 들어가야합니다 -->
       TODO List 
-      <h4> TODO Title : <%= posts[0].title %></h4>
-      <p> Due date : <%= posts[0].date %></p>
+      <%for (var i =0; i < posts.length; i++) { %>
+        <h4> TODO Title : <%= posts[i].title %></h4>
+        <p> Due date : <%= posts[i].date %></p>
+      <%} %>
+
+      
 
 
     <!-- Optional JavaScript; choose one of the two! -->
