JS / HTML restart 2023

--- a/portfolios/HTML_CSS_RE/lecture1/css/main.css
+++ b/portfolios/HTML_CSS_RE/lecture1/css/main.css
@@ -42,6 +42,7 @@
     width: 100%;
     height: 50px;
     background-color: lightgray;
+    clear: both;
     /*
     클리어는 float 을 해제할때 많이씁니다
     float: left 를 해제할땐 clear: left 이런식으로.. 
